fix status space wrapping and reply input counter

--- a/public/assets/css/status.css
+++ b/public/assets/css/status.css
@@ -52,3 +52,7 @@
 .c-thread-line.c-hidden {
     width: 0;
 }
+
+#status-content, #main-status-content {
+    white-space: pre-wrap;
+}
